--- a/vedrans_design_work.html
+++ b/vedrans_design_work.html
@@ -49,7 +49,7 @@
 					<img id="ipad-img-placeholder" class="img-small" src="resources/images/visitor_registration_iPad_app_PLACEHOLDER.png">
 					<div style="padding-bottom: 148.5%;"></div>
 				</div>
-				<script type="text/javascript">lazyLoadImage('ipad-img-container','ipad-img-placeholder','my-work-item__image--ipad-shadow');</script>
+				<script type="text/javascript">lazyLoadImage('ipad-img-container','ipad-img-placeholder','GymSales visitor registration app','my-work-item__image--ipad-shadow');</script>
 
 				<div class="my-work-item__description--ipad">
 				<h2 class="h2-heading h2-heading__with-ipad--side-by-side">Visitor registration app</h2>
@@ -77,7 +77,7 @@
 						<img id="sprint-img-placeholder" class="img-small" src="resources/images/browser_with_joralocal_page_PLACEHOLDER.png">
 						<div style="padding-bottom: 61.2%;"></div>
 					</div>
-					<script type="text/javascript">lazyLoadImage('sprint-img-container','sprint-img-placeholder','my-work-item__image--browser-centred-shadow');</script>
+					<script type="text/javascript">lazyLoadImage('sprint-img-container','sprint-img-placeholder','JoraLocal landing page','my-work-item__image--browser-centred-shadow');</script>
 
 
 			</div>
@@ -94,7 +94,7 @@
 					<img id="vision-img-placeholder" class="img-small" src="resources/images/vision_creating_journey_map_2_PLACEHOLDER.jpg">
 					<div style="padding-bottom: 75%;"></div>
 				</div>
-				<script type="text/javascript">lazyLoadImage('vision-img-container','vision-img-placeholder');</script>
+				<script type="text/javascript">lazyLoadImage('vision-img-container','vision-img-placeholder','People creating a journey map with PostIt notes');</script>
 
 				<div class="my-work-item__description--side-image">
 					<h2 class="h2-heading h2-heading__with-side-image--side-by-side">Cocreating a <nobr>product vision</nobr></h2>
@@ -130,10 +130,10 @@
 					</div>
 
 					<div id="creditcard-img-container" class="my-work-item__image--browser-centred placeholder" data-large="resources/images/browser_with_card_form.png">
-						<img id="creditcard-img-placeholder" class="img-small" src="resources/images/browser_with_card_form_PLACEHOLDER.png" alt="Credit card payment form shown in browser">
+						<img id="creditcard-img-placeholder" class="img-small" src="resources/images/browser_with_card_form_PLACEHOLDER.png">
 						<div style="padding-bottom: 64.55%;"></div>
 					</div>
-					<script type="text/javascript">lazyLoadImage('creditcard-img-container','creditcard-img-placeholder','my-work-item__image--browser-centred-shadow');</script>
+					<script type="text/javascript">lazyLoadImage('creditcard-img-container','creditcard-img-placeholder','Credit card payment form shown in browser','my-work-item__image--browser-centred-shadow');</script>
 
 			</div>
 		</div>
@@ -163,10 +163,10 @@
 					</div>
 
 					<div id="settings-page-img-container" class="my-work-item__image--browser-centred placeholder" data-large="resources/images/browser_with_settings_page.png">
-						<img id="settings-page-img-placeholder" class="img-small" src="resources/images/browser_with_settings_page_PLACEHOLDER.png" alt="Settings page shown within a browser window">
+						<img id="settings-page-img-placeholder" class="img-small" src="resources/images/browser_with_settings_page_PLACEHOLDER.png">
 						<div style="padding-bottom: 64.45%;"></div>
 					</div>
-					<script type="text/javascript">lazyLoadImage('settings-page-img-container','settings-page-img-placeholder','my-work-item__image--browser-centred-shadow');</script>
+					<script type="text/javascript">lazyLoadImage('settings-page-img-container','settings-page-img-placeholder','Settings page shown within a browser window','my-work-item__image--browser-centred-shadow');</script>
 
 			</div>
 		</div>
@@ -185,10 +185,10 @@
 						<div class="my-work-item__side-project">
 							<a href="side_project--walnut.html">
 								<div id="walnut-img-container" class="my-work-item__image--side-project-link placeholder" data-large="resources/images/side_project_logo_walnut.png">
-									<img id="walnut-img-placeholder" class="img-small" src="resources/images/side_project_logo_walnut_PLACEHOLDER.png" alt="Walnut Art App logo – view side project details">
+									<img id="walnut-img-placeholder" class="img-small" src="resources/images/side_project_logo_walnut_PLACEHOLDER.png">
 									<div style="padding-bottom: 100%;"></div>
 								</div>
-								<script type="text/javascript">lazyLoadImage('walnut-img-container','walnut-img-placeholder');</script>
+								<script type="text/javascript">lazyLoadImage('walnut-img-container','walnut-img-placeholder','Walnut Art App logo – view side project details');</script>
 
 								<span class="side-project-name"><span>Walnut Art iOS App</span></span>
 							</a>
@@ -196,30 +196,30 @@
 						<div class="my-work-item__side-project">
 							<a target="_blank" href="http://react-autosuggest.js.org/">
 								<div id="react-img-container" class="my-work-item__image--side-project-link placeholder" data-large="resources/images/side_project_logo_react_auto-suggest.png">
-									<img id="react-img-placeholder" class="img-small" src="resources/images/side_project_logo_react_auto-suggest_PLACEHOLDER.png" alt="React Autosuggest logo – go to side project site">
+									<img id="react-img-placeholder" class="img-small" src="resources/images/side_project_logo_react_auto-suggest_PLACEHOLDER.png">
 									<div style="padding-bottom: 100%;"></div>
 								</div>
-								<script type="text/javascript">lazyLoadImage('react-img-container','react-img-placeholder');</script>
+								<script type="text/javascript">lazyLoadImage('react-img-container','react-img-placeholder','React Autosuggest logo – go to side project site');</script>
 								<span class="side-project-name"><span>react-autosuggest.js.org</span></span>
 							</a>
 						</div>
 						<div class="my-work-item__side-project">
 							<a target="_blank" href="http://accessible-colors.com/">
 								<div id="ac-img-container" class="my-work-item__image--side-project-link placeholder" data-large="resources/images/side_project_logo_accessible_colors.png">
-									<img id="ac-img-placeholder" class="img-small" src="resources/images/side_project_logo_accessible_colors_PLACEHOLDER.png" alt="Accessible Colours logo – go to project site">
+									<img id="ac-img-placeholder" class="img-small" src="resources/images/side_project_logo_accessible_colors_PLACEHOLDER.png">
 									<div style="padding-bottom: 100%;"></div>
 								</div>
-								<script type="text/javascript">lazyLoadImage('ac-img-container','ac-img-placeholder');</script>
+								<script type="text/javascript">lazyLoadImage('ac-img-container','ac-img-placeholder','Accessible Colours logo – go to project site');</script>
 								<span class="side-project-name"><span>accessible-colors.com</span></span>
 							</a>
 						</div>
 						<div class="my-work-item__side-project">
 							<a href="side_project--minty_ninja.html">
 								<div id="ninja-img-container" class="my-work-item__image--side-project-link placeholder" data-large="resources/images/side_project_logo_minty_ninja.png">
-									<img id="ninja-img-placeholder" class="img-small" src="resources/images/side_project_logo_minty_ninja_PLACEHOLDER.png" alt="Minty Ninja logo – view side project details">
+									<img id="ninja-img-placeholder" class="img-small" src="resources/images/side_project_logo_minty_ninja_PLACEHOLDER.png">
 									<div style="padding-bottom: 100%;"></div>
 								</div>
-								<script type="text/javascript">lazyLoadImage('ninja-img-container','ninja-img-placeholder');</script>
+								<script type="text/javascript">lazyLoadImage('ninja-img-container','ninja-img-placeholder','Minty Ninja logo – view side project details');</script>
 								<span class="side-project-name"><span>Minty Ninja (archived)</span></span>
 							</a>
 						</div>
