--- a/about_vedran.html
+++ b/about_vedran.html
@@ -22,6 +22,8 @@
 		<!-- Make nav sticky on scroll -->
 		<script type="text/javascript" src="/js/sticky_nav.js"></script>
 		<script type="text/javascript">formatStickyNav("@colour-white");</script>
+		<!-- lazy load images -->
+		<script src="js/lazy_img.js"></script>
 		<!-- ABOUT ME -->
 		<div class="section">
 			<div class="section__content section--top-of-page section--last-in-section">
@@ -31,7 +33,12 @@
 
 			</div>
 		</div>
-		<img class="image--full-width" src="resources/images/vedran_speaking_at_meetup.jpg" alt="Vedran speaking at Sarajevo UX meetup"/>
+		<div id="speaking-img-container" class="image--full-width placeholder" data-large="resources/images/vedran_speaking_at_meetup.jpg">
+			<img id="speaking-img-placeholder" class="img-small" src="resources/images/vedran_speaking_at_meetup_PLACEHOLDER.jpg">
+			<div style="padding-bottom: 41.56%;"></div>
+		</div>
+		<script type="text/javascript">lazyLoadImage('speaking-img-container','speaking-img-placeholder',"Vedran speaking at Sarajevo UX meetup");</script>
+
 
 		<div class="section section--light ">
 			<div class="sub-section__content sub-section--first-in-section">
@@ -64,7 +71,11 @@
 					<p>This site was designed, and entirely coded by me. No templates and no Bootstrap. You can see the source code at <a class ="link link--on-light-bg link--inline" target="_blank" href="https://github.com/vedranio/vedranio.github.io">my GitHub account</a>.</p>
 			</div>
 		</div>
-		<img class="image--full-width" src="resources/images/family.JPG" alt="Vedran's family"/>
+		<div id="family-img-container" class="image--full-width placeholder" data-large="resources/images/family.JPG">
+			<img id="family-img-placeholder" class="img-small" src="resources/images/family_PLACEHOLDER.JPG">
+			<div style="padding-bottom: 66.36%;"></div>
+		</div>
+		<script type="text/javascript">lazyLoadImage('family-img-container','family-img-placeholder','Vedran and family');</script>
 
 		<!-- START FOOTER -->
 		<script src="js/clipboard.min.js"></script>
