background lazy loading in progress

--- a/vedrans_design_work.html
+++ b/vedrans_design_work.html
@@ -37,6 +37,8 @@
 
 		<!-- lazy load images -->
 		<script src="js/lazy_img.js"></script>
+		<!-- lazy load backgrounds -->
+		<script src="js/lazy_background.js"></script>
 
 		<!-- GYMSALES REGISTRATION APP -->
 		<div id="VisitorRegistrationApp" class="section section--medium">
@@ -116,6 +118,7 @@
 					<p><a class ="link link--on-dark-bg" href="case_study--design_workshop_facilitation.html">Read case study</a></p>
 				</div>
 			</div>
+			<!-- <script type="text/javascript">lazyLoadBackground('WorkshopFacilitationAndWireframeDesign','my-work-item_full-width-image--rubicon-enhanced','/resources/images/rubicon_design_workshop_2.jpg');</script> -->
 		</div>
 
 		<!-- CREDIT CARD PAYMENT -->
