lazy loading background FTW!

--- a/vedrans_design_work.html
+++ b/vedrans_design_work.html
@@ -118,7 +118,7 @@
 					<p><a class ="link link--on-dark-bg" href="case_study--design_workshop_facilitation.html">Read case study</a></p>
 				</div>
 			</div>
-			<!-- <script type="text/javascript">lazyLoadBackground('WorkshopFacilitationAndWireframeDesign','my-work-item_full-width-image--rubicon-enhanced','/resources/images/rubicon_design_workshop_2.jpg');</script> -->
+			<script type="text/javascript">lazyLoadBackground('WorkshopFacilitationAndWireframeDesign','my-work-item_full-width-image--rubicon-enhanced','/resources/images/rubicon_design_workshop_2.jpg');</script>
 		</div>
 
 		<!-- CREDIT CARD PAYMENT -->
@@ -152,6 +152,7 @@
 					<p><a class ="link link--on-dark-bg" href="case_study--usability_testing_with_kolektiv.html">Read case study</a></p>
 				</div>
 			</div>
+			<script type="text/javascript">lazyLoadBackground('CoachingAnOrgInUsabilityTesting','my-work-item_full-width-image--kolektiv-enhanced','/resources/images/kolektiv_watching_usability_testing_summary_video.jpg');</script>
 		</div>
 
 		<!-- GYM SALES SETTINGS -->
